[FIX] helpdesk: fix kanban group column size
Before this commit, the group columns in helpesk
overview overlapped each others.
This commit fixes the column's width to prevent them to
overlap.

task id: 3129146

closes odoo/enterprise#38478

X-original-commit: de1eb4d3ca01b33936d793dfa9123662e39d3fe0

--- a/helpdesk/static/src/scss/helpdesk.scss
+++ b/helpdesk/static/src/scss/helpdesk.scss
@@ -1,8 +1,7 @@
 @include media-breakpoint-up(md) {
     .o_helpdesk_team_kanban_view_view .o_kanban_renderer {
-        .o_kanban_record, .o_kanban_header {
-            min-width: map-get($grid-breakpoints, 'xl') * 0.35;
-        }
+        --KanbanGroup-width: #{map-get($grid-breakpoints, 'xl') * 0.35};
+        --KanbanRecord-width: #{map-get($grid-breakpoints, 'xl') * 0.35};
     }
 }
 
